fixed video in home, aligned to oneplus breakpoint replaced phone png's with better resolution and no shadow!!

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,7 +32,6 @@ a:first-child {
 //     width: 100%;
 //     height: auto;
 // }
-
 article,
 aside,
 details,
@@ -261,7 +260,6 @@ main article {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    
 }
 
 #projectTwo .projectPreview {
@@ -276,7 +274,6 @@ main article {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    
 }
 
 main .projectPreview {
@@ -289,7 +286,6 @@ main .projectPreview {
     filter: drop-shadow(5px 5px 20px rgba(0, 0, 0, 0.2));
     background-size: cover;
 }
-
 
 #projectTwo img,
 #about img {
@@ -382,20 +378,19 @@ main .metaBottom {
 }
 
 .fond img {
-    max-width: 800px;
-    // height: auto;
+    max-width: 800px; // height: auto;
     background-size: cover;
 }
 
-#projectOne,
-.projectPreview video {
-    top: 28px;
-}
-
+// #projectOne,
+// .projectPreview video {
+//     top: 28px;
+// }
 video {
     position: absolute;
-    right: 24.5px; // top: 60px;
-    width: 35px;
+    right: 8.5px; // top: 60px;
+    width: 69px;
+    top: 28px;
 }
 
 footer {
@@ -451,7 +446,7 @@ ul {
 
 footer .footerLinks,
 ul li h3 a {
-    color:#dadada;
+    color: #dadada;
 }
 
 footer ol,
@@ -518,12 +513,12 @@ ul {
     }
     #projectOne,
     .projectPreview video {
-        top: 92px;
+        top: 59px;
     }
     video {
         position: absolute;
-        right: 98.5px;
-        width: 152px;
+        right: 24.5px;
+        width: 203px;
     }
     footer .footerLinks,
     ul {
@@ -630,8 +625,6 @@ ul {
     letter-spacing: -.003em;
 }
 
-
-
 .table-list--two {
     font-size: .9em;
     line-height: 1.58;
@@ -647,22 +640,25 @@ ul {
     text-transform: none;
 }
 
-#indexLinks, .table-list a {
+#indexLinks,
+.table-list a {
     font-size: 1rem;
     font-weight: 700;
     line-height: 120%;
-
     list-style: none;
     color: #212121;
     text-decoration: none;
- 
 }
 
-.table-list{
+.table-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
-
 
 .t3xt a {
     font-size: .9em;
@@ -688,15 +684,10 @@ p a {
     font-size: 21px;
 }
 
-
-
-
-
 // #projectTwo,
 // .pHero {
 //     background-image: url(https://i.imgur.com/mNOL7D4.png);
 //     background-size: contain;
 //     background-repeat: no-repeat;
 //     background-position: center; // background-color: pink;
-    
 // }
